Deleted personal information from Author, replaced collectors with list